# osm-network-data

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/: build_segments.py  config.py  map_to_segments.py  match_trajectory.py
tests/: conftest.py  test_build_segments.py  test_map_to_segments.py  test_match_trajectory.py
trajectory_matching_prototype/: README.md  docker-compose.yml
trajectory_matching_prototype/src/: build_segments.py  config.py  example_pipeline.py  map_to_segments.py  match_trajectory.py
