[project]
name = "osm-network-data"
version = "0.1.0"
description = "GPS trajectory matching against an OSM street network"
requires-python = ">=3.11"
dependencies = [
    "osmnx>=2.0.0",
    "geopandas>=1.0.0",
    "pandas>=2.0.0",
    "shapely>=2.0.0",
    "requests>=2.31.0",
    "pyarrow>=15.0.0",
    "networkx>=3.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
